--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -27,7 +27,40 @@
   </head>
 <body>
     
+ <main class="relative mb-[747px] z-10 bg-white block">
+  <section class="awards-honor mx-24 ">
+    <div class="grid grid-cols-4 gap-6"></div>
+  </section>
+  <div class="teaser mx-32 mt-32">
+    <div class="grid grid-cols-2">
+      <div class="element relative">
+        <div class="backcontent h-full bg-center bg-teaserBg text-white before-content[''] before:bg-red-700 before:absolute before:h-full before:w-full before:opacity-90 z-[-1]">
+          <div class="z-20 relative flex-col h-2/3 p-24 flex text-center ">
+             <div class=" text-5xl capitalize font-bold">
+              our work 
+             </div>
+             <div class="link-content mt-8 relative">
+              <a href="#" class="before:content['']  before:ml-28 ml-10 before:w-3 before:absolute before:bg-white  before:left-[50px] before:top-3 before:h-1">View all services</a>
+            </div>
+          </div>
+        </div>
 
+      </div>
+      <div class="right-element bg-black text-white h-full w-full">
+        <div class="z-20 relative flex-col h-2/3 p-24 flex text-center ">
+          <div class=" text-5xl font-bold">
+            Have a project ?
+          </div>
+          <div class="link-content mt-8 relative">
+           <a href="#" class="before:content['']  before:ml-28 ml-10 before:w-3 before:absolute before:bg-white  before:left-[50px] before:top-3 before:h-1">
+            Get a Quote
+          </a>
+         </div>
+       </div>
+      </div>
+    </div>
+  </div>
+ </main>
     
     <footer class="sticky text-white bottom-0 left-0 w-full bg-black px-16 py-12  !z-[-1]">
         <div class="mx-8 grid lg:grid-cols-4 grid-cols-2 grid-cols-1 gap-4">
