--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -8,7 +8,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
   />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../assets/contact.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script>
@@ -37,16 +37,85 @@
                     <p class="desc font-bold text-sm text-white mt-3 mb-7">Have a question, a project? we'd love to discuss...</p>
                     <form action="#" class="formhandler">
                         <div class="flex justify-between flew-wrap">
-                            <div class="name border-b border-gray-100">
-                                <input type="text" name="" placeholder="Name" class="border-0  focus:outline-0 bg-transparent " id="">
+                            <div class="namehandler border-b border-gray-600">
+                                <input type="text" name="" placeholder="Name" class="border-0 outline-none focus:outline-none bg-transparent " id="">
                             </div>
-                            <div class="email border-b border-gray-100">
-                                <input type="email" name="" placeholder="Email" class="border-0  focus:outline-0 bg-transparent " id="">
+                            <div class="email border-b border-gray-600">
+                                <input type="email" name="" placeholder="Email" class="border-0 outline-none focus:outline-none bg-transparent " id="">
                             </div>
                         </div>
+                        <div class="subject border-b border-gray-600 mt-3">
+                          <input type="text" name="" placeholder="Subject" class="border-0 w-full outline-none focus:outline-none bg-transparent " id="">
+                      </div>
+                      <div class="textarea border-b border-gray-600 mt-3">
+                        <textarea name="" id="" cols="60" class="bg-transparent border-0" rows="10" placeholder="Message"></textarea>
+                      </div>
+                      <div class="submit-btn relative">
+                        <button type="submit" class="w-36 lg:mt-4 md:mt-0 mt-5 font-bold relative px-4 py-2 capitalize bg-red-700  text-white">
+                          send message
+                        </button>
+                      </div>
                     </form>
                 </div>
+                <div class="map">
+                  <div class="mapouter relative text-right h-full widthfull">
+                    <div class="gmap_canvas overflow-hidden bg-none h-full w-full">
+                      <iframe class="h-full w-full" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                      <a href="https://123movies-to.org">123 movies</a><br>
+                      <style></style><a href="https://www.embedgooglemap.net"></a>
+                      <style></style>
+                    </div>
+                  </div>
+                </div>
             </div>
+        </section>
+        <section class="mx-8 mt-14 pb-24">
+          <div class="grid grid-cols-4 gap-4">
+            <div class="call-center">
+              <div class="flex">
+                <div class="icon text-red-700 text-3xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M13 23q-.425 0-.712-.288Q12 22.425 12 22t.288-.712Q12.575 21 13 21h6v-1h-2q-.825 0-1.412-.587Q15 18.825 15 18v-4q0-.825.588-1.413Q16.175 12 17 12h2v-1q0-2.9-2.05-4.95Q14.9 4 12 4Q9.1 4 7.05 6.05Q5 8.1 5 11v1h2q.825 0 1.412.587Q9 13.175 9 14v4q0 .825-.588 1.413Q7.825 20 7 20H5q-.825 0-1.413-.587Q3 18.825 3 18v-7q0-1.85.712-3.488q.713-1.637 1.938-2.862t2.862-1.938Q10.15 2 12 2t3.488.712q1.637.713 2.862 1.938t1.938 2.862Q21 9.15 21 11v10q0 .825-.587 1.413Q19.825 23 19 23Z"/></svg>
+                </div>
+                <a href="#" class="element hover:text-red-700 font-bold text-lg ml-5">+(251) 854-6308</a>
+              </div>
+              <p class="text-gray-400 text-sm mt-5">
+                Call us on above number to get quick solution. Additional charges may apply
+              </p>
+            </div>
+            <div class="skype">
+              <div class="flex">
+                <div class="icon text-red-700 text-3xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M4 4h16v12H5.17L4 17.17V4m0-2c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2H4zm2 10h12v2H6v-2zm0-3h12v2H6V9zm0-3h12v2H6V6z"/></svg>
+                </div>
+                <a href="#" class="element hover:text-red-700 font-bold text-lg ml-5">Skype: HelloFolio</a>
+              </div>
+              <p class="text-gray-400 text-sm mt-5">
+                Call us on above number to get quick solution. Additional charges may apply
+              </p>
+            </div>
+            <div class="mail">
+              <div class="flex">
+                <div class="icon text-red-700 text-3xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm-1 14H5c-.55 0-1-.45-1-1V8l6.94 4.34c.65.41 1.47.41 2.12 0L20 8v9c0 .55-.45 1-1 1zm-7-7L4 6h16l-8 5z"/></svg>
+                </div>
+                <a href="#" class="element hover:text-red-700 font-bold text-lg ml-5">ebantoo@folio.com</a>
+              </div>
+              <p class="text-gray-400 text-sm mt-5">
+                Call us on above number to get quick solution. Additional charges may apply
+              </p>
+            </div>
+            <div class="career">
+              <div class="flex">
+                <div class="icon text-red-700 text-3xl">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" d="M15 4a4 4 0 0 0-4 4a4 4 0 0 0 4 4a4 4 0 0 0 4-4a4 4 0 0 0-4-4m0 1.9a2.1 2.1 0 1 1 0 4.2A2.1 2.1 0 0 1 12.9 8A2.1 2.1 0 0 1 15 5.9M4 7v3H1v2h3v3h2v-3h3v-2H6V7H4m11 6c-2.67 0-8 1.33-8 4v3h16v-3c0-2.67-5.33-4-8-4m0 1.9c2.97 0 6.1 1.46 6.1 2.1v1.1H8.9V17c0-.64 3.1-2.1 6.1-2.1Z"/></svg>
+                </div>
+                <a href="#" class="element hover:text-red-700 font-bold text-lg ml-5">ebantoo@folio.com</a>
+              </div>
+              <p class="text-gray-400 text-sm mt-5">
+                Call us on above number to get quick solution. Additional charges may apply
+              </p>
+            </div>
+          </div>
         </section>
     </main>
     
