--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -381,7 +381,7 @@
         </div>
         <div class="slider-handler  mt-16">
           <div class="swiper mySwiper3">
-            <div class="swiper-wrapper relative">
+            <div class="swiper-wrapper ">
               <div class="swiper-slide">
                 <div class="card-img-handler  relative">
                   <div class="img-handler relative block hover:duration-1000 overflow-hidden h-1/2">
@@ -524,12 +524,12 @@
       
         </div>
       </section>
-      <section class="analytic mt-32 mx-28">
-        <div class="grid grid-cols-3 gap-5">
+      <section class="analytic mt-32 lg:mx-28 md:mx-14 mx-7">
+        <div class="grid  grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
           <div class="service">
-            <div class="head-title">
-              <span class="text-4xl absolute z-[-1]">01</span>
-              <h2 class="text-xl w-1/2 ml-8">
+            <div class="head-title flex">
+              <span class="text-4xl stroke-gray text-transparent">01</span>
+              <h2 class="text-xl w-1/2 ml-1 font-bold">
                 Research and
                 analytics
               </h2>
@@ -542,9 +542,9 @@
             </div>
           </div>
           <div class="service">
-            <div class="head-title">
-              <span class="text-4xl absolute z-[-1]">01</span>
-              <h2 class="text-xl w-1/2 ml-8">
+            <div class="head-title flex">
+              <span class="text-4xl stroke-gray text-transparent">01</span>
+              <h2 class="text-xl w-1/2 ml-1 font-bold">
                 Research and
                 analytics
               </h2>
@@ -557,9 +557,9 @@
             </div>
           </div>
           <div class="service">
-            <div class="head-title">
-              <span class="text-4xl absolute z-[-1]">01</span>
-              <h2 class="text-xl w-1/2 ml-8">
+            <div class="head-title flex">
+              <span class="text-4xl stroke-gray text-transparent">01</span>
+              <h2 class="text-xl w-1/2 ml-1 font-bold">
                 Research and
                 analytics
               </h2>
@@ -574,12 +574,12 @@
         </div>
       </section>
       <section class="partenaire mx-28 mt-32">
-        <div class="grid grid-cols-2">
+        <div class="grid grid-cols-1 lg:grid-cols-2">
           <div class="font-bold">
             <p class="text-7xl w-1/2">worked with</p>
             <p class="text-gray-300 text-sm mt-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio molestias cupiditate deleniti id, consequatur modi. Placeat at aliquid ea aspernatur deleniti debitis nam natus saepe reiciendis dicta? Nihil, hic nam.</p>
           </div>
-          <div class="grid grid-cols-5 gap-4">
+          <div class="grid grid-cols-5  lg:mt-0 mt-7 gap-4">
             <div class="partenaire">
               <img src="https://folio.webestica.com/assets/images/clients/colored/01.svg" alt="">
             </div>
@@ -620,7 +620,7 @@
         </div>
       </section>
       <div class="teaser mx-32 mt-32">
-        <div class="grid grid-cols-2">
+        <div class="grid grid-cols-1 lg:grid-cols-2">
           <div class="element relative">
             <div class="backcontent h-full bg-center bg-teaserBg text-white before-content[''] before:bg-red-700 before:absolute before:h-full before:w-full before:opacity-90 z-[-1]">
               <div class="z-20 relative flex-col h-2/3 p-24 flex text-center ">
@@ -648,26 +648,26 @@
           </div>
         </div>
       </div>
-      <div class="teaser2 mx-32 bg-black mt-32">
-        <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-1">
-          <div class="right-element bg-black text-white h-full w-full">
-            <div class="z-20 relative flex-col h-2/3 p-24 flex  ">
+      <div class="teaser2 lg:mx-32 xs:mx-0 mx-8 bg-black mt-32">
+        <div class="grid lg:grid-cols-2 grid-cols-1 bg-black h-full w-full ">
+          <div class="right-element  text-white ">
+            <div class="z-20 relative flex-col h-2/3 lg:p-24 p-12 flex  ">
               <div class=" text-5xl font-bold">
                 Latest stories in your inbox
               </div>
            </div>
           </div>
           <div class="right-element bg-black text-white h-full w-full">
-            <div class="z-20 relative flex-col h-2/3 lg:py-24 py-10 px-4 flex  ">
+            <div class="z-20 relative flex-col h-full lg:h-2/3 lg:py-24 py-10 px-4 flex  ">
               <p class="desc-email text-gray-400 text-sm">
                 Building a strong brand. Distinctive, recognizable and consistent. Effective communication campaigns that activate your target group.
               </p>
-              <form action="#" class="flex flex-wrap h-1 mt-5">
+              <form action="#" class="flex flex-wrap  mt-5">
                 <div class="emailField w-2/3">
                   <input type="email" name="" class="px-4 text-lg py-1 mt-5 w-full outline-0" id="">
                 </div>
-                <div class="submit-btn w-36 relative">
-                  <button type="submit" class="w-36 lg:mt-5 md:mt-0 mt-5 relative px-4 py-2 capitalize bg-red-700 before:content[''] text-white  before:left-7 before:top-4 before:w-3 before:absolute before:bg-white before:h-1">
+                <div class="submit-btn w-36 relative mt-5">
+                  <button type="submit" class="w-36 lg:mt-0 md:mt-0 mt-0 relative px-4 py-2 capitalize bg-red-700 before:content[''] text-white  before:left-7 before:top-4 before:w-3 before:absolute before:bg-white before:h-1">
                     suscribe
                   </button>
                 </div>
@@ -677,7 +677,7 @@
         </div>
       </div>
     </main>
-      <footer class="sticky text-white bottom-0 left-0 w-full bg-black px-16 py-12  !z-[-1]">
+      <footer class="sticky text-white  w-full bg-black px-16 py-12  !z-[-1]">
         <div class="mx-8 grid lg:grid-cols-4 grid-cols-2 grid-cols-1 gap-4">
           <div class="company-info">
             <h2 class="text-4xl font-bold">
