--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
   />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script>
@@ -43,21 +44,21 @@
 
     </div>
   </header>
-  <section class="memory mx-32">
-    <div class="title">
-      <p class="text-xl">Making minds since</p>
-      <p class="year absolute z-10 text-6xl font-bold">2005</p>
+  <section class="memory mx-32 mt-16">
+    <div class="title absolute">
+      <p class="text-xl font-bold">Making minds since</p>
+      <p class="year text-transparent stroke-black absolute z-10 text-7xl font-bold">2005</p>
     </div>
    
     <div class="grid grid-cols-2 gap-4">
-      <div class="relative  px-20 py-8 mt-8">
+      <div class="relative  px-8 py-8 mt-9">
         <img src="https://folio.webestica.com/assets/images/about/05.jpg" class="" alt="">
         <span class="bg-red-600 absolute right-3 bottom-8 text-3xl text-white origin-bottom -rotate-12 px-4">
           passion dedication & a lot of coffee 🤘
         </span>
       </div>
       
-    <div class="element-right">
+    <div class="element-right p-12">
       <div class="slim-title text-xl">
         we're creating smart website
       </div>
@@ -90,6 +91,9 @@
             Smart use of data & technology for the automation of your business.
           </p>
         </div>
+      </div>
+      <div class="range mt-5">
+        <input type="range" name="" class="w-full " id="">
       </div>
     </div>
     </div>
