--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -186,7 +186,7 @@
   </section>
   
   <section class="company mx-16 mt-32 flex-col bg-black flex justify-center align-center p-12">
-    <h2 class="text-6xl text-center font-bold text-white">Changing things with :</h2>
+    <h2 class="text-6xl text-center font-bold stroke-white">Changing things with :</h2>
     <div class="grid  grid-cols-6 gap-5 p-12  mt-12">
       <div class="p-5">
         <img class="" src="https://folio.webestica.com/assets/images/clients/light/05.svg" alt="">
@@ -220,8 +220,8 @@
       </div>
     </div>
   </section>
-  <section class="awards-honor mx-24 ">
-    <h2 class="text-7xl font-bold">Awards & honor</h2>
+  <section class="awards-honor mx-24 mt-32">
+    <h2 class="text-7xl font-bold stroke-black-none text-transparent">Awards & honor</h2>
     <div class="grid grid-cols-3 gap-4 space-y-4 mt-14">
       <div class="awards-card space-y-3">
         <div class="year text-white bg-black px-1 inline-block py-1">2016</div>
@@ -265,7 +265,7 @@
       <div class="element relative">
         <div class="backcontent h-full bg-center bg-teaserBg text-white before-content[''] before:bg-red-700 before:absolute before:h-full before:w-full before:opacity-90 z-[-1]">
           <div class="z-20 relative flex-col h-2/3 p-24 flex text-center ">
-             <div class=" text-5xl capitalize font-bold">
+             <div class="stroke-white text-transparent text-5xl capitalize font-bold">
               our work 
              </div>
              <div class="link-content mt-8 relative">
@@ -287,6 +287,43 @@
          </div>
        </div>
       </div>
+    </div>
+    <div class="absolute z-20 mt-5">
+      <figure class="position-absolute start-0 bottom-0 ms-n6 mb-n4 z-index-9 d-none d-lg-block">
+        <svg width="285" height="82" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285 82">
+          <rect class="red" fill="red" x="22.67" y="16.58" width="262.22" height="65.42"></rect>
+          <path d="m9.63 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0.01-4.82-2.15-4.82-4.81s2.16-4.81 4.81-4.81c2.66 0 4.82 2.15 4.82 4.81z"></path>
+          <path d="m35.25 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66 0 4.81 2.15 4.81 4.81z"></path>
+          <path d="m60.88 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81s4.81 2.15 4.81 4.81z"></path>
+          <path d="m86.5 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81s4.81 2.15 4.81 4.81z"></path>
+          <path d="m112.12 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66 0 4.81 2.15 4.81 4.81z"></path>
+          <path d="m137.75 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81s4.81 2.15 4.81 4.81z"></path>
+          <path d="m163.37 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66 0 4.81 2.15 4.81 4.81z"></path>
+          <path d="m188.99 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66 0 4.81 2.15 4.81 4.81z"></path>
+          <path d="m214.62 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81s4.81 2.15 4.81 4.81z"></path>
+          <path d="m240.24 4.83c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66 0 4.81 2.15 4.81 4.81z"></path>
+          <path d="m9.63 30.38c0 2.66-2.16 4.81-4.81 4.81-2.66 0.01-4.82-2.15-4.82-4.81s2.16-4.81 4.81-4.81c2.66 0 4.82 2.16 4.82 4.81z"></path>
+          <path d="m35.25 30.38c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66 0 4.81 2.16 4.81 4.81z"></path>
+          <path d="m60.88 30.38c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81s4.81 2.16 4.81 4.81z"></path>
+          <path d="m86.5 30.38c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81s4.81 2.16 4.81 4.81z"></path>
+          <path d="m112.12 30.38c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66 0 4.81 2.16 4.81 4.81z"></path>
+          <path d="m137.75 30.38c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81s4.81 2.16 4.81 4.81z"></path>
+          <circle cx="158.56" cy="30.38" r="4.81"></circle>
+          <circle cx="184.18" cy="30.38" r="4.81"></circle>
+          <circle cx="209.8" cy="30.38" r="4.81"></circle>
+          <circle cx="235.43" cy="30.38" r="4.81"></circle>
+          <path d="m9.63 55.94c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.82-2.16-4.82-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66-0.01 4.82 2.15 4.82 4.81z"></path>
+          <path d="m35.25 55.94c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66-0.01 4.81 2.15 4.81 4.81z"></path>
+          <path d="m60.88 55.94c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.65-0.01 4.81 2.15 4.81 4.81z"></path>
+          <path d="m86.5 55.94c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.65-0.01 4.81 2.15 4.81 4.81z"></path>
+          <path d="m112.12 55.94c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.66-0.01 4.81 2.15 4.81 4.81z"></path>
+          <path d="m137.75 55.94c0 2.66-2.16 4.81-4.81 4.81-2.66 0-4.81-2.16-4.81-4.81 0-2.66 2.16-4.81 4.81-4.81 2.65-0.01 4.81 2.15 4.81 4.81z"></path>
+          <circle cx="158.56" cy="55.94" r="4.81"></circle>
+          <circle cx="184.18" cy="55.94" r="4.81"></circle>
+          <circle cx="209.8" cy="55.94" r="4.81"></circle>
+          <circle cx="235.43" cy="55.94" r="4.81"></circle>
+        </svg>
+      </figure>
     </div>
   </div>
  </main>
