--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -32,31 +32,31 @@
         <div class="bckg-slider   h-screen  ">
             <div class="swiper mySwiper w-screen">
                 <div class="swiper-wrapper w-screen">
-                  <div class="swiper-slide  ">
-                    <div class="description text-white absolute top-32 z-10 mx-32">
-                      <h5 class="text-xl">Folio digital agency</h5>
-                      <h1 class="mt-20 text-7xl font-bold">
-                        <div class="text-transparent text-9xl stroke-red ">Agency</div>
+                  <div class="swiper-slide bg-teaserBg">
+                    <div class="description text-white absolute lg:top-32 md:top-24 top-16 z-10 lg:mx-32 md:mx-24 mx-14">
+                      <h5 class="lg:text-xl md:text-lg text-base">Folio digital agency</h5>
+                      <h1 class="lg:mt-20 md:mt-10 mt-5 lg:text-7xl md:text-5xl text-2xl font-bold">
+                        <div class="text-transparent lg:text-9xl md:text-6xl text-3xl stroke-red ">Agency</div>
                         <span>business</span>
                       </h1>
-                      <p class="mt-5 mb-12 text-lg">
+                      <p class="mt-5 lg:mb-12 md:mb-6 mb-3 lg:text-lg md:text-base text-sm">
                         We transform your perception into an excellent website
                       </p>
-                      <a href="#" class="bg-red-600 p-3 "> Discus a Project</a>
+                      <a href="#" class="bg-red-600 lg:p-3 md:p-2 p-1 md:text-base text-sm lg:text-lg "> Discus a Project</a>
                     </div>
                     <div class="shape-pipa h-screen bg-black opacity-60 w-screen absolute">
 
                     </div>
-                    <img class=""  src="https://folio.webestica.com/assets/images/bg/02.jpg"  alt="">
+                    <!-- <img class="h-full w-full"  src="https://folio.webestica.com/assets/images/bg/02.jpg"  alt=""> -->
                   </div>
                   <div class="swiper-slide ">
                     <div class="shape-pipa h-screen bg-black opacity-60 w-screen absolute"></div>
-                    <img class=""  src="https://folio.webestica.com/assets/images/bg/02.jpg"  alt=""></div>
+                    <!-- <img class="h-full w-full"  src="https://folio.webestica.com/assets/images/bg/02.jpg"  alt=""></div> -->
                   </div>
                 </div>
                 
                 <div class="swiper-pagination"></div>
-                <div class="relative z-10  bottom-32 flex space-x-6 text-white left-16">
+                <div class="relative z-10  bottom-32 flex space-x-6 text-white lg:block hidden left-16">
                   <div class="rod-button-prev text-white border-white border-2 p-6 rounded-full">
                       <svg  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
@@ -73,7 +73,7 @@
                 </div>
                 
               </div>
-              <div class="social-link space-x-8 absolute bottom-96 left-[-5rem] rotate-90 z-10 text-white">
+              <div class="social-link md:space-x-4 space-x-2 lg:space-x-8 absolute bottom-96 left-[-5rem] rotate-90 z-10 text-white">
                 <a href="#" class="text-lg capitalize">dribble</a>
                 <a href="#" class="text-lg capitalize">twitter</a>
                 <a href="#" class="text-lg capitalize">Facebook</a>
