--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -98,7 +98,16 @@
             >Contact</a
           >
         </li>
-        
+        <li>
+          <a class="md:p-4 py-2 block hover:text-red-600" href="../event/index.html"
+            >Event</a
+          >
+        </li>
+        <li>
+          <a class="md:p-4 py-2 block hover:text-red-600" href="../artist/index.html"
+            >Artist</a
+          >
+        </li>
       </ul>
     </div>
     
