--- a/about/about.html
+++ b/about/about.html
@@ -190,20 +190,20 @@
     </div>
   </section>
   <section class="our-team md:mx-16 mx-8 lg:mx-32 space-y-12 mt-12">
-    <h1 class="md:text-4xl text-2xl lg:text-6xl font-bold capitalize ">our team</h1>
+    <h1 class="md:text-4xl text-2xl lg:text-6xl font-bold capitalize ">Notre equipe</h1>
     <div class="swiper mySwiper h-[32rem] ">
       <div class="swiper-wrapper ">
         <div class="swiper-slide sm:w-2/3 h-2/2 w-2/3 overflow-hidden relative ">
 
           <a href="#" class="sm:w-full team-card overflow-hidden absolute ">
             <div class="img-handler relative z-20 w-full">
-              <img src="https://folio.webestica.com/assets/images/team/02.jpg" alt="" class="h-full w-full duration-1000 hover:scale-150 ">
+              <img src="../assets/Tony Mefe_4913.jpg" alt="" class="h-full w-full duration-1000 hover:scale-150 ">
             </div>
             <div class="desc absolute z-20 bottom-0 w-full bg-gradient-to-t h-1/2 from-black to-transparent overflow-hidden">
               <div class="h-1/2 w-2/2 px-4 bottom-0  absolute">
                 <div class="text-white lg:mt-5 md:mt-3 mt-1">
-                  <p class="role lg:text-xl md:text-lg text-sm font-bold">alarick saltzman</p>
-                  <p class="lg:mt-2  text-sm">developpeur</p>
+                  <p class="role lg:text-xl md:text-lg text-sm font-bold">Tony Mefe</p>
+                  <p class="lg:mt-2  text-sm">role / poste</p>
                 </div>
               </div>
             </div>
@@ -213,55 +213,7 @@
 
           <a href="#" class="sm:w-full team-card overflow-hidden absolute ">
             <div class="img-handler relative z-20 w-full">
-              <img src="https://folio.webestica.com/assets/images/team/02.jpg" alt="" class="h-full w-full duration-1000 hover:scale-150 ">
-            </div>
-            <div class="desc absolute z-20 bottom-0 w-full bg-gradient-to-t h-1/2 from-black to-transparent overflow-hidden">
-              <div class="h-1/2 w-2/2 px-4 bottom-0  absolute">
-                <div class="text-white lg:mt-5 md:mt-3 mt-1">
-                  <p class="role lg:text-xl md:text-lg text-sm font-bold">alarick saltzman</p>
-                  <p class="lg:mt-2  text-sm">developpeur</p>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="swiper-slide sm:w-2/3 h-2/2 w-2/3 overflow-hidden relative ">
-
-          <a href="#" class="sm:w-full team-card overflow-hidden absolute ">
-            <div class="img-handler relative z-20 w-full">
-              <img src="https://folio.webestica.com/assets/images/team/02.jpg" alt="" class="h-full w-full duration-1000 hover:scale-150 ">
-            </div>
-            <div class="desc absolute z-20 bottom-0 w-full bg-gradient-to-t h-1/2 from-black to-transparent overflow-hidden">
-              <div class="h-1/2 w-2/2 px-4 bottom-0  absolute">
-                <div class="text-white lg:mt-5 md:mt-3 mt-1">
-                  <p class="role lg:text-xl md:text-lg text-sm font-bold">alarick saltzman</p>
-                  <p class="lg:mt-2  text-sm">developpeur</p>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="swiper-slide sm:w-2/3 h-2/2 w-2/3 overflow-hidden relative ">
-
-          <a href="#" class="sm:w-full team-card overflow-hidden absolute ">
-            <div class="img-handler relative z-20 w-full">
-              <img src="https://folio.webestica.com/assets/images/team/02.jpg" alt="" class="h-full w-full duration-1000 hover:scale-150 ">
-            </div>
-            <div class="desc absolute z-20 bottom-0 w-full bg-gradient-to-t h-1/2 from-black to-transparent overflow-hidden">
-              <div class="h-1/2 w-2/2 px-4 bottom-0  absolute">
-                <div class="text-white lg:mt-5 md:mt-3 mt-1">
-                  <p class="role lg:text-xl md:text-lg text-sm font-bold">alarick saltzman</p>
-                  <p class="lg:mt-2  text-sm">developpeur</p>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="swiper-slide sm:w-2/3 h-2/2 w-2/3 overflow-hidden relative ">
-
-          <a href="#" class="sm:w-full team-card overflow-hidden absolute ">
-            <div class="img-handler relative z-20 w-full">
-              <img src="https://folio.webestica.com/assets/images/team/02.jpg" alt="" class="h-full w-full duration-1000 hover:scale-150 ">
+              <img src="../assets/AFA.jpg" alt="" class="h-full w-full duration-1000 hover:scale-150 ">
             </div>
             <div class="desc absolute z-20 bottom-0 w-full bg-gradient-to-t h-1/2 from-black to-transparent overflow-hidden">
               <div class="h-1/2 w-2/2 px-4 bottom-0  absolute">
