--- a/contact/contact.html
+++ b/contact/contact.html
@@ -123,12 +123,12 @@
                     </div>
                     <p class="desc font-bold text-sm text-eb mt-3 mb-7">vous avez un projet?, nous serons ravi d'en discuter</p>
                     <form action="#" class="formhandler mx-3">
-                        <div class="lg:flex md:flex  md:justify-between flew-wrap">
-                            <div class="namehandler ">
-                                <input type="text" name="" placeholder="Nom" class="border-0  w-full border-b focus:border-b focus:!border-0 focus:outline-eb focus:ring-0 border-gray-600 outline-none  bg-transparent " id="">
+                        <div class="lg:flex lg:space-x-2  lg:flex-nowrap flex-wrap">
+                            <div class="namehandler w-full lg:w-1/2">
+                                <input type="text" name="" placeholder="Nom" class="!w-full border-0  w-full border-b focus:border-b focus:!border-0 focus:outline-eb focus:ring-0 border-gray-600 outline-none  bg-transparent " id="">
                             </div>
-                            <div class="email ">
-                                <input type="email" name="" placeholder="Email" class="border-0  border-b w-full border-gray-600 focus:border-b focus:!border-0 focus:outline-eb focus:ring-0 outline-none focus:outline-none bg-transparent " id="">
+                            <div class="email w-full lg:w-1/2 ">
+                                <input type="email" name="" placeholder="Email" class="w-full border-0  border-b w-full border-gray-600 focus:border-b focus:!border-0 focus:outline-eb focus:ring-0 outline-none focus:outline-none bg-transparent " id="">
                             </div>
                         </div>
                         <div class="subject  mt-3">
