--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   
   <meta name="theme-color" content="#FF8E12">
   <link rel="shortcut icon" href="../assets/cropped-Logo-Escale-Bantoo-2-1.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./contact/style.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script>
@@ -80,17 +80,17 @@
             md:pt-0"
         >
           <li>
-            <a class="md:p-4 py-2 block hover:text-eb" href="../index.html"
+            <a class="md:p-4 py-2 block hover:text-eb" href="./index.html"
               >Acceuil</a
             >
           </li>
           <li>
-            <a class="md:p-4 py-2 block hover:text-eb" href="../services/services.html"
+            <a class="md:p-4 py-2 block hover:text-eb" href="./services.html"
               >Service</a
             >
           </li>
           <li>
-            <a class="md:p-4 py-2 block hover:text-eb" href="../about/about.html"
+            <a class="md:p-4 py-2 block hover:text-eb" href="./about.html"
               >A propos</a>
           </li>
           <li>
@@ -98,7 +98,7 @@
               >Contact</a
             >
           </li>
-          <li>
+          <!-- <li>
             <a class="md:p-4 py-2 block hover:text-eb" href="../event/index.html"
               >Evenement</a
             >
@@ -107,7 +107,7 @@
             <a class="md:p-4 py-2 block hover:text-eb" href="../artist/index.html"
               >Artiste</a
             >
-          </li>
+          </li> -->
         </ul>
       </div>
       
