--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@
               md:pt-0"
           >
             <li>
-              <a class="md:p-4 py-2 block hover:text-eb" href="../index.html"
+              <a class="md:p-4 py-2 block hover:text-eb" href="./index.html"
                 >Acceuil</a
               >
             </li>
@@ -91,12 +91,12 @@
               >
             </li>
             <li>
-              <a class="md:p-4 py-2 block hover:text-eb" href="../about.html"
+              <a class="md:p-4 py-2 block hover:text-eb" href="./about.html"
                 >A propos</a
               >
             </li>
             <li>
-              <a class="md:p-4 py-2 block hover:text-eb" href="../contact.html"
+              <a class="md:p-4 py-2 block hover:text-eb" href="./contact.html"
                 >Contact</a
               >
             </li>
