--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
   />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./about/style.css">
   
   <meta name="theme-color" content="#FF8E12">
     <link rel="shortcut icon" href="../assets/cropped-Logo-Escale-Bantoo-2-1.png" type="image/x-icon">
@@ -84,12 +84,12 @@
           md:pt-0"
       >
         <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="../index.html"
+          <a class="md:p-4 py-2 block hover:text-eb" href="./index.html"
             >Acceuil</a
           >
         </li>
         <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="../services/services.html"
+          <a class="md:p-4 py-2 block hover:text-eb" href="./services.html"
             >Service</a
           >
         </li>
@@ -99,7 +99,7 @@
           >
         </li>
         <li>
-          <a class="md:p-4 py-2 block hover:text-eb" href="../contact/contact.html"
+          <a class="md:p-4 py-2 block hover:text-eb" href="./contact.html"
             >Contact</a
           >
         </li>
