--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <a class="md:p-4 py-2 block hover:text-eb" href="./escale.html">L’Escale Bantoo </a>
             </li>
             <li>
-              <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Le Salon</a>
+              <a class="md:p-4 py-2 block hover:text-eb" href="./salon.html">Le Salon</a>
             </li>
             <li>
               <a class="md:p-4 py-2 block hover:text-eb" href="./services.html">Global Music Hub</a>
